kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: sockshop.alameenoq.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: grafana.alameenoq.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-community-grafana
                port:
                  number: 80
    - host: prometheus.alameenoq.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-community-kube-prometheus
                port:
                  number: 9090
